[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devopstoolbox"
version = "0.1.0"
description = "A Python-based CLI toolkit for automating daily DevOps operations."
requires-python = ">=3.9"
readme = "README.md"
authors = [
  { name = "George Farias", email = "georgesouzafarias@gmail.com" },
]

dependencies = [
    "boto3",
    "kubernetes",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[project.scripts]
devopstoolbox = "devopstoolbox.main:app"